# pyzoom

./: .gitignore  LICENCSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test_and_deploy.yml
pyzoom/: __init__.py  _base.py  _client.py  err.py  oauth.py  schemas.py
tests/: test_pyzoom.py
