[tool.poetry]
name = "pyzoom"
version = "1.0.9"
description = "Python wrapper for Zoom Video API"
authors = ["MB <mb@blaster.ai>"]
license = "MIT"
readme='README.md'
homepage='https://github.com/licht1stein/pyzoom'

[tool.poetry.dependencies]
python = "^3.7"
attrs = "*"
typing-extensions = ">=3.7.4,<5.0.0"
cachetools = ">=4.1,<6.0"
shortuuid = "^1.0.1"
pydantic = "^2.4.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.6"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
